[tool.poetry]
name = "lumi-webhook"
version = "0.1.0"
description = "Lumi Chatbot Webhook"
authors = ["asjacobs92 <asjacobs92@inf.ufrgs.br>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "==3.7"
rasa = "^2.8.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pylint = "*"
pylint-venv = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
