[tool.poetry]
name = "lumi-webhook"
version = "0.1.0"
description = "Lumi Chatbot Webhook"
authors = ["asjacobs92 <asjacobs92@inf.ufrgs.br>"]
license = "GPL-3.0-or-later"


[tool.poetry.dependencies]
python = "^3.7"
flask = "*"
future = "*"
dialogflow = "*"
nltk = "*"
spacy = "*"
anytree = "*"
msgpack = "*"
scikit-learn = "*"
matplotlib = "*"
joblib = "*"
numpy = "*"
requests = "*"
pymongo = "*"
dnspython = "*"
flask-cors = "*"
gunicorn = "*"
charset-normalizer = "^3.0.1"
psutil = "^5.9.8"

[tool.poetry.dev-dependencies]
pylint = "*"
pylint-venv = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
